fix: fix IE11 #table default alignment + add table-layout modifier

--- a/packages/dnb-ui-lib/src/style/elements/table.scss
+++ b/packages/dnb-ui-lib/src/style/elements/table.scss
@@ -28,6 +28,10 @@
   border-spacing: 0;
   border-collapse: collapse;
 
+  &--fixed {
+    table-layout: fixed;
+  }
+
   &__sticky-helper > td {
     display: block;
     overflow: hidden;
@@ -61,9 +65,11 @@
     color: var(--color-emerald-green);
 
     vertical-align: bottom;
-  }
-  & > thead > tr > th,
-  & &__th {
+
+    &:not([align]):not(.dnb-table--left):not(.dnb-table--right):not(.dnb-table--center) {
+      text-align: inherit;
+    }
+
     // Firefox fix
     @supports (-moz-appearance: meterbar) and
       (background-blend-mode: difference, normal) {
@@ -267,6 +273,7 @@
   tr.sticky {
     top: 0;
   }
+  /* stylelint-disable-next-line */
   tr.sticky th {
     position: sticky;
     top: inherit;
